feat: add global alert monitor summary
